another fix for the word wrap

--- a/site/static/css/rdf4j.css
+++ b/site/static/css/rdf4j.css
@@ -75,3 +75,7 @@ h4.doc-section-header {
 pre code {
   white-space: pre !important;
 }
+
+pre {
+  word-wrap: unset !important;
+}
